src/test/ui/rfc-2005-default-binding-mode/slice.stderr
error[E0004]: non-exhaustive patterns: `&[]` not covered
  --> $DIR/slice.rs:6:11
   |
LL |     match sl { //~ ERROR non-exhaustive patterns
   |           ^^ pattern `&[]` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
